fixed some pc and item layout issues

--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -90,20 +90,24 @@
     
   }
 
-  .main {
+  .nameless_main {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 5px;
+  }
 
-    .notes {
+  .notes {
   
-      .editor {
-          height: 215px;
-          border-radius: 5px;
-          border: 2px solid #00000047;
-          padding: 0 5px 0 5px;
-          background: rgba(0, 0, 0, 0.05);
-      }
+    .editor {
+        height: 210px;
+        border-radius: 5px;
+        border: 2px solid #00000047;
+        padding: 0 5px 0 5px;
+        background: rgba(0, 0, 0, 0.05);
     }
+  }
+
+  .sheet-body .tab .notes .editor {
+    height: 255px;
   }
 }
