--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -94,11 +94,14 @@
       padding: 0 8px;
     }
   }
-
-  .item-list {
+  .gear,
+  .contact,
+  .power,
+  .compulsion,
+  .deterrent,
+  .vulnerability {
     flex: 1;
     align-content: flex-start;
-    overflow: hidden;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
